--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "bin": {
     "vality-openapi": "lib/bin.js"
   },
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
