--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vality/openapi-generator-cli",
-  "version": "2.0.0",
+  "version": "3.0.0",
   "description": "",
   "main": "lib/index.js",
   "bin": {
@@ -16,11 +16,11 @@
   "author": "Vality",
   "license": "Apache-2.0",
   "devDependencies": {
-    "@types/node": "^18.16.18",
-    "prettier": "2.8.8"
+    "@types/node": "^22.13.9",
+    "prettier": "^3.5.3"
   },
   "dependencies": {
-    "@openapitools/openapi-generator-cli": "^2.6.0",
+    "@openapitools/openapi-generator-cli": "^2.17.0",
     "sade": "^1.8.1",
     "shelljs": "^0.8.5"
   }
